--- a/02_css/연습문제.html
+++ b/02_css/연습문제.html
@@ -112,7 +112,10 @@
 
      .wrap > .left-wrap > .left-info > dl > dt::before{
       content: "▷";
+     }
 
+     .wrap input{
+      margin-left: -30px;
      }
   </style>
 </head>
