--- a/03_js/ES6.html
+++ b/03_js/ES6.html
@@ -97,10 +97,15 @@
           함수이름([인자]); 
     */
 
-     const myFunc = () => {
+     const myFunc1 = () => {
         console.log('myFunc 실행');
      } 
-     myFunc();
+     myFunc1();
+
+     const myFunc2 = () =>  'hello world';   //return만 존재하는 경우 return 키워드 생략가능. 중괄호도 생략가능(람다참고)
+     
+
+     console.log(myFunc2());
 
   </script>
 
