--- a/03_js/08_builtin_function.html
+++ b/03_js/08_builtin_function.html
@@ -11,7 +11,7 @@
     //eval() : 전달한 문자열을 JavaScript 코드로 인식하고 실행
     eval('console.log(1 + 2)');        //크게 쓸 일은 없는 코드입니다. 보안에 빵꾸나기 딱 좋기 때문에...
 
-    //isNaN() : NaN 여부를 판단하여 true 아니면 true/false를 반환
+    //isNaN() : NaN 여부를 판단하여 true/false를 반환
     var number = 10;
     if(isNaN(number)){
       console.log(number + '는 숫자가 아님')
@@ -50,7 +50,7 @@
     */
 
     //setTimeout()을 이용한 카운트다운 (재귀 호출을 이용하기)
-    var msg='';
+    var msg=''; 
     function countDown(number){
     setTimeout(function(){
       if(number ==0) {
