--- a/03_js/연습문제3.html
+++ b/03_js/연습문제3.html
@@ -145,10 +145,14 @@
   </style>
   <script>
     /* 5개 thumbnail 이미지에 마우스를 가져다대면 해당 이미지를 original-image로 표시하시오. */
-    document.getElementById('thumbnail-images').addEventListener(focus, function(){
-      document.getElementById('original-image').style.backgroundImage.value = 
-    })
     
+    var original_image = document.getElementById('original-image');
+    var thumbnail_images = document.querySelectorAll('#thumbnail-images > div');
+    
+
+
+
+
   </script>
 
   <hr>
